# ct-viewer

./: .gitignore  LICENCE  Open CT Viewer.command  README.md  REBUILD_APP.md  install-and-build.sh  package-lock.json  package.json  pyproject.toml  run-dev.sh  setup.sh  start.sh  stop.sh  style.md
backend/: .env.example  .gitignore  main.py  requirements.txt  run.py
backend/services/: cache_manager.py  dataset_case_statistics.py  dataset_service.py  geometry_validator.py  resampler.py  slice_extractor.py  volume_loader.py
backend/tests/: test_cache_manager.py  test_cache_manager_properties.py  test_dataset_case_statistics.py  test_error_handling_properties.py  test_file_size_validation_properties.py  test_geometry_validator.py  test_geometry_validator_properties.py  test_lesion_component_volumes.py  test_logging_properties.py  test_resampler.py  test_resampler_properties.py  test_slice_extractor.py  test_slice_extractor_properties.py  test_volume_loader.py  test_volume_loader_properties.py
electron/: main.js  preload.js
electron/assets/: icon.icns
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  canvas-renderer.tsx  dataset-case-nav.tsx  dataset-lesion-size-chart.tsx  dataset-load-dialog.tsx  dataset-viewer-panel.tsx  electron-title-bar-wrapper.tsx  file-upload-dialog.tsx  global-controls.tsx  hex-color-popover.tsx  query-provider.tsx  theme-provider.tsx  theme-toggle.tsx  viewer-grid.tsx  viewer-panel.tsx  volume-info-card.tsx
(+22 files in other folders)
