[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-viewer"
version = "0.1.0"
description = "CT viewer: N image+segmentation pairs (NIfTI/MHA), synchronized or per-panel slice."
readme = "ct_viewer/README.md"
requires-python = ">=3.8"
dependencies = [
    "SimpleITK>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "PySide6>=6.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ct_viewer*"]
